@@ -1,5 +1,9 @@
 2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* eventsource.cc: Error checking when opening files.
+
+	* Makefile.am: Added eventsink.
+
 	* Makefile.am: Compile viewevents conditionally.
 
 2008-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>
